--- a/thjonusta.html
+++ b/thjonusta.html
@@ -9,7 +9,7 @@
 
   <meta name="description" content="Description of the page less than 150 characters">  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-
+  
         <!-- Hammer reload -->
           <script>
             setInterval(function(){
@@ -32,7 +32,7 @@
             }, 1000)
           </script>
         <!-- /Hammer reload -->
-
+      
 
   <link rel='stylesheet' href='assets/css/normalize.css'>
 <link rel='stylesheet' href='assets/css/style.css'>
@@ -54,63 +54,63 @@
 
 </head>
 
-<body class="home">
+<body class="thjonusta">
 
   <header role="banner">
     <nav role="navigation">
   <ul>
-    <li class='current'><a class='current' href="index.html">Heim</a></li>
+    <li class='current-parent'><a class='current-parent' href="index.html">Heim</a></li>
     <li><a href="atvinna.html">Atvinna</a></li>
-<!--    <li><a href="thjonusta.html">Þjónusta</a></li>
+<!--    <li class='current'><a class='current' href="thjonusta.html">Þjónusta</a></li>
     <li><a href="um_okkur.html">Um Okkur</a></li>-->
   </ul>
 </nav>
 
-
-    <section>
-      <div class="wrapper">
-        <svg class="logo" id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 133 73">
-          <defs>
-            <style>.cls-1,.cls-2{fill:#fff;}.cls-1{opacity:0.5;}.cls-2{font-size:30px;font-family:FuturaPT-Heavy, Futura PT;letter-spacing:-0.04em;}.cls-3{fill:none;stroke:#fff;stroke-miterlimit:10;stroke-width:2.2px;}</style>
-          </defs>
-          <title>Bilabaer sf. Logo</title>
-          <polygon class="cls-1" points="18.54 30.49 67.42 30.49 42.98 13.87 18.54 30.49"/>
-          <polygon class="cls-1" points="42.98 30.49 91.86 30.49 67.42 13.87 42.98 30.49"/>
-          <polygon class="cls-1" points="67.42 30.49 116.3 30.49 91.86 13.87 67.42 30.49"/>
-          <text class="cls-2" transform="translate(16.71 57.37)">Bílabær</text>
-          <rect class="cls-3" x="1.51" y="6.59" width="124.67" height="64.93"/>
-          <rect class="cls-3" x="6.84" y="1.52" width="124.67" height="64.93"/></svg>
-          <h2>Bifreiðaþjónusta</h2>
-          <h3>Brákarbraut 5, 310 Borgarnesi</h3>
-          <h3>S: 437-1300</h3>
-      </div>
-    </section>
 
   </header>
 
   <section class="wrapper">
     <!-- Write your HTML! -->
 
-    <div class="hours">
-      <h2>Opnunar tímar:</h2>
-      <ul>
-        <li>Mánudaga <span>08:00–18:00</span></li>
-        <li>Þriðjudaga  <span>08:00–18:00</span></li>
-        <li>Miðvikudaga <span>08:00–18:00</span></li>
-        <li>Fimmtudaga  <span>08:00–18:00</span></li>
-        <li>Föstudaga <span>08:00–18:00</span></li>
-        <li>Laugardaga <span>Lokað</span></li>
-        <li>Sunnudaga <span>Lokað</span></li>
-      </ul>
-      <p>Ath. Lokað er í hádeginu alla daga milli 12:00 og 13:00</p>
+    <div class="">
+      <h2>Við leggjum áherslu á þjónustu.</h2>
+      <p>Við hjá Bílabæ kapkostum við að þínum þörfum er mætt. Bílinn sé vel handlaður og metnaður of fagmenska sé að leiðarljósi í allri vinnu sem við komum að, Þessi texti er rosalega mikið um ekki neitt, og mætti endilega vinna í að skrifa niður hér eitthvað hnitmiðað og markvíst. hehe</p>
+    </div>
+
+    <div class="thjonusta">
+      <div>
+        <h2>Hjólastillingar</h2>
+        <p>Til að hámarka jafnvægi bílsins við hemlun, minnka slit á dekkjum og draga úr eldsneytiseiðslu þarf fjöðrunarbúnaður að vera rétt hjólastilltur.</p>
+      </div>
+
+      <div>
+        <h2>Hjólastillingar</h2>
+        <p>Til að hámarka jafnvægi bílsins við hemlun, minnka slit á dekkjum og draga úr eldsneytiseiðslu þarf fjöðrunarbúnaður að vera rétt hjólastilltur.</p>
+      </div>
+
+      <div>
+        <h2>Hjólastillingar</h2>
+        <p>Til að hámarka jafnvægi bílsins við hemlun, minnka slit á dekkjum og draga úr eldsneytiseiðslu þarf fjöðrunarbúnaður að vera rétt hjólastilltur.</p>
+      </div>
+
+      <div>
+        <h2>Pústþjónusta</h2>
+        <p>Við gerum sjálf við flest það plast er í bílatjónum eins og framstuðara, afturstuðara, lista, festingar á ljós og fleira.</p>
+      </div>
+
+      <div>
+        <h2>Pústþjónusta</h2>
+        <p>Við gerum sjálf við flest það plast er í bílatjónum eins og framstuðara, afturstuðara, lista, festingar á ljós og fleira.</p>
+      </div>
+
+      <div>
+        <h2>Pústþjónusta</h2>
+        <p>Við gerum sjálf við flest það plast er í bílatjónum eins og framstuðara, afturstuðara, lista, festingar á ljós og fleira.</p>
+      </div>
+
     </div>
 
   </section>
-
-    <div id="instafeed"></div>
-    <div class="center">
-      <!--<p><a href="https://www.instagram.com/bilabaer/" rel="me">Sjá meira</a></p>-->
-    </div>
 
 <footer>
   <div class="wrapper">
@@ -126,8 +126,8 @@
     </div>
 
     <div>
-      <a href="https://www.instagram.com/bilabaer/" class="fa fa-instagram" rel="me" target="_blank"><!--instagram--></a>
-      <a href="https://www.facebook.com/bilabaer/" class="fa fa-facebook" rel="me" target="_blank"><!--facebook--></a>
+      <a href="https://www.instagram.com/bilabaer/" class="fa fa-instagram" rel="me"><!--instagram--></a>
+      <a href="https://www.facebook.com/bilabaer/" class="fa fa-facebook" rel="me"><!--facebook--></a>
     </div>
   </div>
 </footer>
