--- a/um_okkur.html
+++ b/um_okkur.html
@@ -9,7 +9,7 @@
 
   <meta name="description" content="Description of the page less than 150 characters">  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-
+  
         <!-- Hammer reload -->
           <script>
             setInterval(function(){
@@ -32,7 +32,7 @@
             }, 1000)
           </script>
         <!-- /Hammer reload -->
-
+      
 
   <link rel='stylesheet' href='assets/css/normalize.css'>
 <link rel='stylesheet' href='assets/css/style.css'>
@@ -54,63 +54,49 @@
 
 </head>
 
-<body class="home">
+<body class="um_okkur">
 
   <header role="banner">
     <nav role="navigation">
   <ul>
-    <li class='current'><a class='current' href="index.html">Heim</a></li>
+    <li class='current-parent'><a class='current-parent' href="index.html">Heim</a></li>
     <li><a href="atvinna.html">Atvinna</a></li>
 <!--    <li><a href="thjonusta.html">Þjónusta</a></li>
-    <li><a href="um_okkur.html">Um Okkur</a></li>-->
+    <li class='current'><a class='current' href="um_okkur.html">Um Okkur</a></li>-->
   </ul>
 </nav>
 
-
-    <section>
-      <div class="wrapper">
-        <svg class="logo" id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 133 73">
-          <defs>
-            <style>.cls-1,.cls-2{fill:#fff;}.cls-1{opacity:0.5;}.cls-2{font-size:30px;font-family:FuturaPT-Heavy, Futura PT;letter-spacing:-0.04em;}.cls-3{fill:none;stroke:#fff;stroke-miterlimit:10;stroke-width:2.2px;}</style>
-          </defs>
-          <title>Bilabaer sf. Logo</title>
-          <polygon class="cls-1" points="18.54 30.49 67.42 30.49 42.98 13.87 18.54 30.49"/>
-          <polygon class="cls-1" points="42.98 30.49 91.86 30.49 67.42 13.87 42.98 30.49"/>
-          <polygon class="cls-1" points="67.42 30.49 116.3 30.49 91.86 13.87 67.42 30.49"/>
-          <text class="cls-2" transform="translate(16.71 57.37)">Bílabær</text>
-          <rect class="cls-3" x="1.51" y="6.59" width="124.67" height="64.93"/>
-          <rect class="cls-3" x="6.84" y="1.52" width="124.67" height="64.93"/></svg>
-          <h2>Bifreiðaþjónusta</h2>
-          <h3>Brákarbraut 5, 310 Borgarnesi</h3>
-          <h3>S: 437-1300</h3>
-      </div>
-    </section>
 
   </header>
 
   <section class="wrapper">
     <!-- Write your HTML! -->
 
-    <div class="hours">
-      <h2>Opnunar tímar:</h2>
-      <ul>
-        <li>Mánudaga <span>08:00–18:00</span></li>
-        <li>Þriðjudaga  <span>08:00–18:00</span></li>
-        <li>Miðvikudaga <span>08:00–18:00</span></li>
-        <li>Fimmtudaga  <span>08:00–18:00</span></li>
-        <li>Föstudaga <span>08:00–18:00</span></li>
-        <li>Laugardaga <span>Lokað</span></li>
-        <li>Sunnudaga <span>Lokað</span></li>
-      </ul>
-      <p>Ath. Lokað er í hádeginu alla daga milli 12:00 og 13:00</p>
+    <div class="fyrirtaekid">
+      <h2>Bílabær sf.</h2>
+      <p>Bílabær bifreiðaverkstæði hefur verið starfrækt síðan 2004. Við sinnum öllum almennum bílaviðgerðum og bifreiðaþjónustu á vesturlandi.</p>
     </div>
+
+    <div class="starfsmenn">
+      <div class="pers">
+        <img src="assets/img/halfdan_profilmynd.jpg" alt="Hálfdán Æ. Þórirsson" />
+        <div class="bio">
+          <h2>Hálfdán Æ. Þórirsson</h2>
+          <p>Billions are spent each year on cosmetic products that promise to delete wrinkles, lighten age spots, and eliminate itching, flaking, or redness. But the simplest and cheapest way to keep your skin healthy and youthful looking is to stay out of the sun. Billions are spent each year on cosmetic products that promise to delete wrinkles.</p>
+        </div>
+      </div>
+
+      <div class="pers">
+        <img src="assets/img/sigursteinn_profilmynd.jpg" alt="Sigursteinn O. Hálfdánarson" />
+        <div class="bio">
+          <h2>Sigursteinn O. Hálfdánarson</h2>
+          <p>Billions are spent each year on cosmetic products that promise to delete wrinkles, lighten age spots, and eliminate itching, flaking, or redness. But the simplest and cheapest way to keep your skin healthy and youthful looking is to stay out of the sun. Billions are spent each year on cosmetic products that promise to delete wrinkles, lighten age spots, and eliminate itching, flaking, or redness.</p>
+        </div>
+      </div>
+    </div>
+
 
   </section>
-
-    <div id="instafeed"></div>
-    <div class="center">
-      <!--<p><a href="https://www.instagram.com/bilabaer/" rel="me">Sjá meira</a></p>-->
-    </div>
 
 <footer>
   <div class="wrapper">
@@ -126,8 +112,8 @@
     </div>
 
     <div>
-      <a href="https://www.instagram.com/bilabaer/" class="fa fa-instagram" rel="me" target="_blank"><!--instagram--></a>
-      <a href="https://www.facebook.com/bilabaer/" class="fa fa-facebook" rel="me" target="_blank"><!--facebook--></a>
+      <a href="https://www.instagram.com/bilabaer/" class="fa fa-instagram" rel="me"><!--instagram--></a>
+      <a href="https://www.facebook.com/bilabaer/" class="fa fa-facebook" rel="me"><!--facebook--></a>
     </div>
   </div>
 </footer>
