--- a/atvinna.html
+++ b/atvinna.html
@@ -54,37 +54,18 @@
 
 </head>
 
-<body class="home">
+<body class="atvinna">
 
   <header role="banner">
     <nav role="navigation">
   <ul>
-    <li class='current'><a class='current' href="index.html">Heim</a></li>
-    <li><a href="atvinna.html">Atvinna</a></li>
+    <li class='current-parent'><a class='current-parent' href="index.html">Heim</a></li>
+    <li class='current'><a class='current' href="atvinna.html">Atvinna</a></li>
 <!--    <li><a href="thjonusta.html">Þjónusta</a></li>
     <li><a href="um_okkur.html">Um Okkur</a></li>-->
   </ul>
 </nav>
 
-
-    <section>
-      <div class="wrapper">
-        <svg class="logo" id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 133 73">
-          <defs>
-            <style>.cls-1,.cls-2{fill:#fff;}.cls-1{opacity:0.5;}.cls-2{font-size:30px;font-family:FuturaPT-Heavy, Futura PT;letter-spacing:-0.04em;}.cls-3{fill:none;stroke:#fff;stroke-miterlimit:10;stroke-width:2.2px;}</style>
-          </defs>
-          <title>Bilabaer sf. Logo</title>
-          <polygon class="cls-1" points="18.54 30.49 67.42 30.49 42.98 13.87 18.54 30.49"/>
-          <polygon class="cls-1" points="42.98 30.49 91.86 30.49 67.42 13.87 42.98 30.49"/>
-          <polygon class="cls-1" points="67.42 30.49 116.3 30.49 91.86 13.87 67.42 30.49"/>
-          <text class="cls-2" transform="translate(16.71 57.37)">Bílabær</text>
-          <rect class="cls-3" x="1.51" y="6.59" width="124.67" height="64.93"/>
-          <rect class="cls-3" x="6.84" y="1.52" width="124.67" height="64.93"/></svg>
-          <h2>Bifreiðaþjónusta</h2>
-          <h3>Brákarbraut 5, 310 Borgarnesi</h3>
-          <h3>S: 437-1300</h3>
-      </div>
-    </section>
 
   </header>
 
@@ -92,25 +73,14 @@
     <!-- Write your HTML! -->
 
     <div class="hours">
-      <h2>Opnunar tímar:</h2>
-      <ul>
-        <li>Mánudaga <span>08:00–18:00</span></li>
-        <li>Þriðjudaga  <span>08:00–18:00</span></li>
-        <li>Miðvikudaga <span>08:00–18:00</span></li>
-        <li>Fimmtudaga  <span>08:00–18:00</span></li>
-        <li>Föstudaga <span>08:00–18:00</span></li>
-        <li>Laugardaga <span>Lokað</span></li>
-        <li>Sunnudaga <span>Lokað</span></li>
-      </ul>
-      <p>Ath. Lokað er í hádeginu alla daga milli 12:00 og 13:00</p>
+      <h2>Bifvélavirki óskast.</h2>
+      <p>Óskum eftir að ráða bifvélavirkja til framtíðarstarfa. Æskilegt er að viðkomandi hafi haldgóða almenna þekkingu á bifreiðaviðgerðum.</p>
+      <p>Meirapróf er kostur.</p>
+      <p>Sjálfstæði í vinnu nauðsynleg og að vera tilbúinn að vinna aukavinnu (bakvaktir).</p>
+      <p>Upplýsingar á <a href="mailto:bilabaer@bilabaer.is">bilabaer@bilabaer.is</a> eða í síma <a href="tel:354-437-1300">4371300</a> / <a href="tel:692-5525">6925525</a></p>
     </div>
 
   </section>
-
-    <div id="instafeed"></div>
-    <div class="center">
-      <!--<p><a href="https://www.instagram.com/bilabaer/" rel="me">Sjá meira</a></p>-->
-    </div>
 
 <footer>
   <div class="wrapper">
