update to match live site

--- a/dekk.html
+++ b/dekk.html
@@ -19,8 +19,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel='stylesheet' href='assets/css/normalize.css'>
-  <link rel='stylesheet' href='assets/css/style.css'>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel='stylesheet' href='assets/css/style.css'>
 
   <meta property="og:title" content="Bílabær Bifreiðaverkstæði | Brákarbraut 5 | Borgarnesi | Sími - 437-1300" />
   <meta property="og:description" content="Bílabær óskar eftir að ráða bifvélavirkja í framtíðarstarf á verkstæði í Borgarnesi" />
@@ -45,7 +45,8 @@
     <nav role="navigation">
   <ul>
     <li class='current-parent'><a class='current-parent' href="index.html">Heim</a></li>
-    <li class='current'><a class='current' href="atvinna.html">Atvinna</a></li>
+    <li class='current'><a class='current' href="dekk.html">Dekk</a></li>
+    <li><a href="atvinna.html">Atvinna</a></li>
   </ul>
 </nav>
 
@@ -54,16 +55,11 @@
 
   <section class="wrapper">
     <!-- Write your HTML! -->
+    <h1>Dekkjaleit</h1>
+    <h3>Hér fyrir neðan er hægt að sjá dekk sem við bjóðum uppá ásamt verði.</h3>
+    <p>Leitarvélin er boðin af samstarfsaðila okkar og sjá þeir um að halda úti verði og vörulista.</p>
+    <iframe style="box-sizing: border-box; border: 1px solid; padding: 25px;" src="https://cat.nesdekk.is" width="100%" height="4500" frameborder="0"></iframe>
 
-    <div class="hours">
-      <h2>Bifvélavirki óskast.</h2>
-      <p>Óskum eftir að ráða bifvélavirkja til framtíðarstarfa.</p>
-      <p>Æskilegt er að viðkomandi hafi haldgóða almenna þekkingu á bifreiðaviðgerðum.<br />
-      Sjálfstæði í vinnu nauðsynleg og að vera tilbúinn að vinna aukavinnu (bakvaktir).<br />
-      Meirapróf er kostur.</p>
-      <p>Upplýsingar hjá <a href="mailto:bilabaer@bilabaer.is">bilabaer@bilabaer.is</a> eða í síma <a href="tel:+354-437-1300">437-1300</a> / <a href="tel:+354-692-5525">692-5525</a>.</p>
-      <p>Hálfdán Þórisson.</p>
-    </div>
 
   </section>
 
