--- a/index.html
+++ b/index.html
@@ -5,81 +5,79 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-  <title>Bílabær Bifreiðaverkstæði, forsíða</title>
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-WGWGXVH');</script>
+  <!-- End Google Tag Manager -->
 
-  <meta name="description" content="Description of the page less than 150 characters">  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Bílabær Bifreiðaverkstæði | Brákarbraut 5 | Borgarnesi | Sími - 437-1300</title>
 
-
-        <!-- Hammer reload -->
-          <script>
-            setInterval(function(){
-              try {
-                if(typeof ws != 'undefined' && ws.readyState == 1){return true;}
-                ws = new WebSocket('ws://'+(location.host || 'localhost').split(':')[0]+':35353')
-                ws.onopen = function(){ws.onclose = function(){document.location.reload()}}
-                window.onbeforeunload = function() { ws = null }
-                ws.onmessage = function(){
-                  var links = document.getElementsByTagName('link');
-                    for (var i = 0; i < links.length;i++) {
-                    var link = links[i];
-                    if (link.rel === 'stylesheet' && !link.href.match(/typekit/)) {
-                      href = link.href.replace(/((&|\?)hammer=)[^&]+/,'');
-                      link.href = href + (href.indexOf('?')>=0?'&':'?') + 'hammer='+(new Date().valueOf());
-                    }
-                  }
-                }
-              }catch(e){}
-            }, 1000)
-          </script>
-        <!-- /Hammer reload -->
-
+  <meta name="description" content="Bílabær sf. sinnir bíla viðgerðum, smur- og dekkjaþjónustu ásamt bílaflutningum á vesturlandi"> 
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel='stylesheet' href='assets/css/normalize.css'>
-<link rel='stylesheet' href='assets/css/style.css'>
+  <link rel='stylesheet' href='assets/css/style.css'>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
   <script src='assets/js/jquery-1.8.3.min.js'></script>
-<script src='assets/js/app.js'></script>
+  <script src='assets/js/app.js'></script>
   <script src='assets/js/slick.min.js'></script>
   <script src='assets/js/instafeed.js'></script>
 
+  <meta property="og:title" content="Bílabær Bifreiðaverkstæði | Brákarbraut 5 | Borgarnesi | Sími - 437-1300" />
+  <meta property="og:description" content="Bílabær sf. sinnir bíla viðgerðum, smur- og dekkjaþjónustu ásamt bílaflutningum á vesturlandi" />
+  <meta property="og:url" content="http://bilabaer.is/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:locale" content="is_is" />
+  <meta property="og:image" content="http://bilabaer.is/assets/img/bilabaer-og_r.jpg" />
 
-  <link href="assets/favicon.ico" rel="shortcut icon">
-  <link href="assets/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="favicon.ico" rel="shortcut icon">
 
-  <link rel="me" href="mailto:us@thevikingsabroad.com" />
-  <link rel="me" href="sms:+14152781022" />
-
+  <link rel="me" href="mailto:bilabaer@bilabaer.is" />
 
 </head>
 
 <body class="home">
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WGWGXVH"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 
   <header role="banner">
     <nav role="navigation">
   <ul>
     <li class='current'><a class='current' href="index.html">Heim</a></li>
     <li><a href="atvinna.html">Atvinna</a></li>
-<!--    <li><a href="thjonusta.html">Þjónusta</a></li>
-    <li><a href="um_okkur.html">Um Okkur</a></li>-->
   </ul>
 </nav>
 
 
     <section>
       <div class="wrapper">
-        <svg class="logo" id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 133 73">
-          <defs>
-            <style>.cls-1,.cls-2{fill:#fff;}.cls-1{opacity:0.5;}.cls-2{font-size:30px;font-family:FuturaPT-Heavy, Futura PT;letter-spacing:-0.04em;}.cls-3{fill:none;stroke:#fff;stroke-miterlimit:10;stroke-width:2.2px;}</style>
-          </defs>
-          <title>Bilabaer sf. Logo</title>
-          <polygon class="cls-1" points="18.54 30.49 67.42 30.49 42.98 13.87 18.54 30.49"/>
-          <polygon class="cls-1" points="42.98 30.49 91.86 30.49 67.42 13.87 42.98 30.49"/>
-          <polygon class="cls-1" points="67.42 30.49 116.3 30.49 91.86 13.87 67.42 30.49"/>
-          <text class="cls-2" transform="translate(16.71 57.37)">Bílabær</text>
-          <rect class="cls-3" x="1.51" y="6.59" width="124.67" height="64.93"/>
-          <rect class="cls-3" x="6.84" y="1.52" width="124.67" height="64.93"/></svg>
+          <svg class="logo" id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 133 73">
+            <defs>
+              <style>.cls-1,.cls-3{fill:#fff;}.cls-1{opacity:0.5;}.cls-1,.cls-2{isolation:isolate;}.cls-4{fill:none;stroke:#fff;stroke-miterlimit:10;stroke-width:2.2px;}</style>
+            </defs>
+            <title>Bilabaer sf. Logo</title>
+            <polygon class="cls-1" points="18.54 30.49 67.42 30.49 42.98 13.87 18.54 30.49"/>
+            <polygon class="cls-1" points="42.98 30.49 91.86 30.49 67.42 13.87 42.98 30.49"/>
+            <polygon class="cls-1" points="67.42 30.49 116.3 30.49 91.86 13.87 67.42 30.49"/>
+            <g class="cls-2">
+              <path class="cls-3" d="M25,37.36c1.08,0,3.54.06,5.1,1.53a5.16,5.16,0,0,1,1.44,3.78,4.7,4.7,0,0,1-.66,2.55,3.67,3.67,0,0,1-1.68,1.47A5.21,5.21,0,0,1,32,48a4.88,4.88,0,0,1,1.29,3.57,5.47,5.47,0,0,1-1.56,4,7.58,7.58,0,0,1-5.28,1.71H18.9v-20Zm-1.56,8.13h.75a4.29,4.29,0,0,0,2.34-.57,2.12,2.12,0,0,0,.81-1.77,2,2,0,0,0-.78-1.68,3.84,3.84,0,0,0-2.4-.51h-.72Zm0,8.28h1.11c1.17,0,2.58,0,3.42-.81a2.21,2.21,0,0,0,.66-1.68A2.15,2.15,0,0,0,28,49.66c-.81-.75-2.37-.75-3.3-.75H23.46Z"/>
+              <path class="cls-3" d="M39.66,44V57.37H35.34V44Zm1.77-6.12-4,4.05-1.95-1.44,3.09-4.56Z"/>
+              <path class="cls-3" d="M46.59,35.5V57.37H42.27V35.5Z"/>
+              <path class="cls-3" d="M59.16,44h4.32V57.37H59.16V55.75a4.46,4.46,0,0,1-4,2.07,6.34,6.34,0,0,1-5-2,7.08,7.08,0,0,1-1.95-5,7.62,7.62,0,0,1,2.07-5.4A6.45,6.45,0,0,1,55,43.54a5,5,0,0,1,4.2,2Zm-5.49,4.23a3.34,3.34,0,0,0-1,2.43,3.45,3.45,0,0,0,.9,2.4,3.55,3.55,0,0,0,2.55,1.05,3.2,3.2,0,0,0,2.25-.93,3.55,3.55,0,0,0,.06-5,3.62,3.62,0,0,0-2.4-.93A3.41,3.41,0,0,0,53.67,48.22Z"/>
+              <path class="cls-3" d="M70.11,35.5v10a5,5,0,0,1,4.17-2,6.74,6.74,0,0,1,4.65,1.8A7.15,7.15,0,0,1,81,50.62,7.5,7.5,0,0,1,78.93,56a6,6,0,0,1-4.59,1.83,4.76,4.76,0,0,1-4.23-2.07v1.62H65.79V35.5Zm.69,12.75a3.45,3.45,0,0,0-1,2.46,3.25,3.25,0,0,0,1,2.4,3.69,3.69,0,0,0,2.46,1,3.31,3.31,0,0,0,2.25-.93,3.39,3.39,0,0,0,1-2.46,3.45,3.45,0,0,0-1-2.55,3.14,3.14,0,0,0-2.31-.9A3.17,3.17,0,0,0,70.8,48.25Z"/>
+              <path class="cls-3" d="M104.91,53.32a6.59,6.59,0,0,1-2.61,3.48,7.14,7.14,0,0,1-4.08,1,8.24,8.24,0,0,1-3.27-.6A6.56,6.56,0,0,1,93,55.63a5,5,0,0,1-2.25,1.71,8.27,8.27,0,0,1-3.21.48,6.06,6.06,0,0,1-4.5-1.47,4.09,4.09,0,0,1-1.17-3A3.7,3.7,0,0,1,83,50.56,6.47,6.47,0,0,1,87.72,49a5.67,5.67,0,0,1,3.15.81v-.27a3,3,0,0,0-.78-2,3.72,3.72,0,0,0-2.61-.84,12,12,0,0,0-3.45.66v-3.3A14.54,14.54,0,0,1,88,43.54c2.88,0,4.17,1,5,2.31A6.35,6.35,0,0,1,98,43.54a6.89,6.89,0,0,1,5.22,2,8,8,0,0,1,1.8,5.43v.42H95.28a3.65,3.65,0,0,0,.9,2.31,2.78,2.78,0,0,0,2.19.84,2.89,2.89,0,0,0,1.53-.36,2.31,2.31,0,0,0,1-1.17Zm-18.6-1a1.26,1.26,0,0,0-.39.93,1.35,1.35,0,0,0,.39.93,2.87,2.87,0,0,0,2,.69,3.22,3.22,0,0,0,2.1-.69,1.28,1.28,0,0,0,.39-.93,1.35,1.35,0,0,0-.39-.93,3,3,0,0,0-2.07-.69A2.69,2.69,0,0,0,86.31,52.33ZM101,48.85a3.05,3.05,0,0,0-.87-1.62,2.86,2.86,0,0,0-1.92-.69,2.56,2.56,0,0,0-1.86.63,3.52,3.52,0,0,0-1,1.68Z"/>
+              <path class="cls-3" d="M106.59,44h4.32v2.1a4.8,4.8,0,0,1,1.68-1.86,4.14,4.14,0,0,1,2.31-.57,4.34,4.34,0,0,1,1.41.21l-.24,4.05a4.08,4.08,0,0,0-1.95-.48,2.82,2.82,0,0,0-2.16.9,5.08,5.08,0,0,0-1,3.6v5.43h-4.32Z"/>
+            </g>
+            <rect class="cls-4" x="1.51" y="6.59" width="124.67" height="64.93"/>
+            <rect class="cls-4" x="6.84" y="1.52" width="124.67" height="64.93"/>
+          </svg>
           <h2>Bifreiðaþjónusta</h2>
           <h3>Brákarbraut 5, 310 Borgarnesi</h3>
           <h3>S: 437-1300</h3>
@@ -94,23 +92,19 @@
     <div class="hours">
       <h2>Opnunar tímar:</h2>
       <ul>
-        <li>Mánudaga <span>08:00–18:00</span></li>
-        <li>Þriðjudaga  <span>08:00–18:00</span></li>
-        <li>Miðvikudaga <span>08:00–18:00</span></li>
-        <li>Fimmtudaga  <span>08:00–18:00</span></li>
-        <li>Föstudaga <span>08:00–18:00</span></li>
+        <li>Mánudaga <span>08:00–17:00</span></li>
+        <li>Þriðjudaga  <span>08:00–17:00</span></li>
+        <li>Miðvikudaga <span>08:00–17:00</span></li>
+        <li>Fimmtudaga  <span>08:00–17:00</span></li>
+        <li>Föstudaga <span>08:00–17:00</span></li>
         <li>Laugardaga <span>Lokað</span></li>
         <li>Sunnudaga <span>Lokað</span></li>
       </ul>
-      <p>Ath. Lokað er í hádeginu alla daga milli 12:00 og 13:00</p>
+      <p>Ath. Lokað er í hádeginu alla daga milli 12:00 og 13:00.</p>
     </div>
 
   </section>
 
-    <div id="instafeed"></div>
-    <div class="center">
-      <!--<p><a href="https://www.instagram.com/bilabaer/" rel="me">Sjá meira</a></p>-->
-    </div>
 
 <footer>
   <div class="wrapper">
