testing deployment pipeline

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <div>
       <p>Bílabær Sf.<br />
       Brákarbraut 5, 310 Borgarnes<br />
-      Ísland</p>
+      Ísland.</p>
     </div>
 
     <div>
